# hello

./: .gitignore  package-lock.json
webserver/: Cargo.toml  README.CloudflareR2.md
webserver/ai/: proposalAssistant.py
webserver/migrations/2025-04-05-165226_add_availability_status/: down.sql  up.sql
webserver/migrations/2025-04-11-123315_add_account_settings/: down.sql  up.sql
webserver/migrations/2025-04-25-085015_add_notification_settings_with_timezone/: down.sql  up.sql
webserver/migrations/2025-05-06-084620_add_sound_preferences_to_notification_settings/: down.sql  up.sql
webserver/migrations/2025-05-09-110757_add_auto_time_zone_to_notification_settings_with_timezone/: down.sql  up.sql
webserver/migrations/2025-05-15-111125_create_user_photo_uploads/: down.sql  up.sql
webserver/migrations/2025-05-20-105804_create_user_profiles/: up.sql
webserver/src/: main.rs  routes.rs  s3_client.rs  schema.rs
webserver/src/auth/: jwt_auth_service.rs
webserver/src/handlers/: auth_handler.rs  availability_status_handler.rs  error.rs  job_handler.rs  mod.rs  notification_settings_handler.rs  project_handler.rs  task_handler.rs  user_photo_uploads_handler.rs  user_profile_handler.rs
webserver/src/models/: availability_status.rs  mod.rs  notification_settings.rs  user_photo_uploads.rs  user_profile.rs
webserver/src/search/: data_sync.rs
webserver/src/services/: availability_status_service.rs  job_service.rs  mod.rs  notification_email_service.rs  notification_settings_service.rs  search_service.rs  user_photo_uploads_service.rs  user_profile_service.rs  (+1 more)
(+110 files in other folders)
